{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 139,
  "lineage": "a3b50654-730d-5d48-c323-4d45b4976fbb",
  "resources": [
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:network-acl/acl-0547cf9a4ea583d23",
            "default_network_acl_id": "acl-0547cf9a4ea583d23",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0547cf9a4ea583d23",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "818210062884",
            "subnet_ids": [
              "subnet-0745b329872e39099",
              "subnet-08e953cf4ec0c184f"
            ],
            "tags": {
              "Name": "rosa-rcarrata-default"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-default"
            },
            "vpc_id": "vpc-042d137aed809cacc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:route-table/rtb-08510ca1971a6b716",
            "default_route_table_id": "rtb-08510ca1971a6b716",
            "id": "rtb-08510ca1971a6b716",
            "owner_id": "818210062884",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "rosa-rcarrata-default"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-042d137aed809cacc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:security-group/sg-064628e595996d791",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-064628e595996d791",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "818210062884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rosa-rcarrata-default"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-default"
            },
            "vpc_id": "vpc-042d137aed809cacc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fed05606ac26a73",
            "domain": "vpc",
            "id": "eipalloc-08fed05606ac26a73",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-63-34-13-123.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.34.13.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rosa-rcarrata-eu-west-1a"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-eu-west-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:internet-gateway/igw-032288ae43697a641",
            "id": "igw-032288ae43697a641",
            "owner_id": "818210062884",
            "tags": {
              "Name": "rosa-rcarrata"
            },
            "tags_all": {
              "Name": "rosa-rcarrata"
            },
            "vpc_id": "vpc-042d137aed809cacc"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fed05606ac26a73",
            "association_id": "eipassoc-03c14ca29f9b8f2a0",
            "connectivity_type": "public",
            "id": "nat-09467536b748e86a6",
            "network_interface_id": "eni-061cc346cd1dca36f",
            "private_ip": "10.66.101.68",
            "public_ip": "63.34.13.123",
            "subnet_id": "subnet-08e953cf4ec0c184f",
            "tags": {
              "Name": "rosa-rcarrata-eu-west-1a"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-eu-west-1a"
            }
          },
          "dependencies": [
            "module.rosa-vpc.aws_eip.nat",
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e19a456321cd26401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09467536b748e86a6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e19a456321cd2640",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_eip.nat",
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_nat_gateway.this",
            "module.rosa-vpc.aws_route_table.private",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-032288ae43697a641",
            "id": "r-rtb-0a87718942d8ca2571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a87718942d8ca257",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_route_table.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:route-table/rtb-0e19a456321cd2640",
            "id": "rtb-0e19a456321cd2640",
            "owner_id": "818210062884",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rosa-rcarrata-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-private-eu-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-042d137aed809cacc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:route-table/rtb-0a87718942d8ca257",
            "id": "rtb-0a87718942d8ca257",
            "owner_id": "818210062884",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rosa-rcarrata-public"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-042d137aed809cacc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb18c89883847957",
            "route_table_id": "rtb-0e19a456321cd2640",
            "subnet_id": "subnet-0745b329872e39099"
          },
          "dependencies": [
            "module.rosa-vpc.aws_route_table.private",
            "module.rosa-vpc.aws_subnet.private",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b92af8984ce7d60d",
            "route_table_id": "rtb-0a87718942d8ca257",
            "subnet_id": "subnet-08e953cf4ec0c184f"
          },
          "dependencies": [
            "module.rosa-vpc.aws_route_table.public",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:subnet/subnet-0745b329872e39099",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.66.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0745b329872e39099",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818210062884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rosa-rcarrata-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-private-eu-west-1a"
            },
            "vpc_id": "vpc-042d137aed809cacc"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:subnet/subnet-08e953cf4ec0c184f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.66.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e953cf4ec0c184f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818210062884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rosa-rcarrata-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "rosa-rcarrata-public-eu-west-1a"
            },
            "vpc_id": "vpc-042d137aed809cacc"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818210062884:vpc/vpc-042d137aed809cacc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.66.0.0/16",
            "default_network_acl_id": "acl-0547cf9a4ea583d23",
            "default_route_table_id": "rtb-08510ca1971a6b716",
            "default_security_group_id": "sg-064628e595996d791",
            "dhcp_options_id": "dopt-0bb18aa9908e80cd5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042d137aed809cacc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08510ca1971a6b716",
            "owner_id": "818210062884",
            "tags": {
              "Name": "rosa-rcarrata"
            },
            "tags_all": {
              "Name": "rosa-rcarrata"
            }
          }
        }
      ]
    }
  ]
}